--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Uncomment .env from .gitignore to prevent it from being committed to version control
 TOKEN=secret-starter-mern
-MONGODB_URI=<your_mongodb_uri mongodb+srv://username:password@your-cluster.mongodb.net/database>
+MONGODB_URI=mongodb+srv://neel_db_user:Neel1609@mp3cluster.cm1fimo.mongodb.net/mp3?retryWrites=true&w=majority
